--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
 
             <div class="header-right">
                 <div class="header-search">
-                    <input type="text" name="search" placeholder="Search">
-                    <button>
-                        <img src="/assets/images/loupe.png" alt="Search">
-                    </button>
+                    <form action="">
+                        <input type="text" name="search" placeholder="Search">
+                        <button>
+                            <img src="/assets/images/loupe.png" alt="Search">
+                        </button>
+                    </form>
+                </div>
+
+                <div class="header-menu">
+                    <img src="/assets/images/menu.png" alt="Menu">
                 </div>
                 
             </div>
