--- a/index.html
+++ b/index.html
@@ -48,7 +48,25 @@
                 <img src="/assets/images/c3.jpg" alt="Milk-shake">
             </div>
         </div>
+    </section>
 
+    <section class="area1">
+        <div class="area1-content">
+            <div class="bar"></div>
+            <h2>Four Drinks, A Million <br> Reasons</h2>
+            <div class="area1-quote">
+                "Just love yourself and you're set" - Lady Gaga
+            </div>
+            <div class="area1-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing
+                elit. Sunt rem ullam facere aut esse, atque optio!
+                Tempore libero sit saepe nulla odio commodi cum quo
+                earum! Quia, eos. Numquam, cum.
+            </div>
+            <a href="#">learn more</a>
+        </div>
+        <div class="area1-img1"></div>
+        <div class="area1-img2"></div>
     </section>
     
 </body>
