--- a/index.html
+++ b/index.html
@@ -55,18 +55,42 @@
             <div class="bar"></div>
             <h2>Four Drinks, A Million <br> Reasons</h2>
             <div class="area1-quote">
-                "Just love yourself and you're set" - Lady Gaga
+                <em>"Just love yourself and you're set" - Lady Gaga </em>
             </div>
             <div class="area1-text">
                 Lorem, ipsum dolor sit amet consectetur adipisicing
                 elit. Sunt rem ullam facere aut esse, atque optio!
                 Tempore libero sit saepe nulla odio commodi cum quo
                 earum! Quia, eos. Numquam, cum.
+                Lorem, ipsum dolor sit amet consectetur adipisicing
+                elit. Sunt rem ullam facere aut esse, atque optio!
+                Tempore libero sit saepe nulla odio commodi cum quo
+                earum! Quia, eos. Numquam, cum.
             </div>
-            <a href="#">learn more</a>
+            <a href="#" class="button">learn more</a>
         </div>
         <div class="area1-img1"></div>
         <div class="area1-img2"></div>
+    </section>
+
+    <section class="area2">
+        <div class="area2-content">
+            <div class="bar"></div>
+            <h2>Introducing Vanilla Sweet <br>
+                Cream Cold Brew-Sweet,<br>
+                Creamy, Cold, Bold
+            </h2>
+            
+            <div class="area2-text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing
+                elit. Sunt rem ullam facere aut esse, atque optio!
+                Tempore libero sit saepe nulla odio commodi cum quo
+                earum! Quia, eos. Numquam, cum.
+            </div>
+            <a href="#" class="button">learn more</a>
+        </div>
+        <div class="area2-img1"></div>
+        <div class="area2-img2"></div>
     </section>
     
 </body>
