--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
 
         <div class="area4-img1"></div>
     </section>
+
+    <section class="area5"></section>
+
+    <footer>
+        Criado por alguém <br>
+        Créditos do layout para Nicepage
+    </footer>
     
 </body>
 </html>
