--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/styke.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
 </head>
 <body>
 
